fix(chat): wrap long text

--- a/css/_chat.scss
+++ b/css/_chat.scss
@@ -226,6 +226,8 @@
 
     .messagecontent {
         margin: 5px 10px;
+        max-width: 100%;
+        overflow: hidden;
     }
 }
 
